--- a/backend/views/index.jade
+++ b/backend/views/index.jade
@@ -15,11 +15,11 @@ block content
         .row
           .left-text.col-lg-6.col-md-12.col-sm-12.col-xs-12(data-scroll-reveal='enter left move 30px over 0.6s after 0.4s')
             h1
-              | Hệ Thống Điểm Danh Sinh Viên 
-              em PTIT Roll-Call
+              | Hệ Thống Quản Lí Sinh Viên 
+              em UIS PTIT
             p
-              a(href='#') PTIT Roll-Call 
-              | là hệ thống hỗ trợ quản lý lớp học, đem đến giải pháp tiện lợi giúp điểm danh sinh viên nhanh chóng thông qua thẻ sinh viên hoặc mã QR.
+              a(href='#') UIS PTIT 
+              | là hệ thống hỗ trợ quản lý lớp học, sinh viên và đem đến giải pháp tiện lợi giúp điểm danh sinh viên nhanh chóng thông qua thẻ sinh viên hoặc mã QR.
             a.main-button-slider(href='/api-docs') Tài Liệu API
     // ***** Header Text End *****
     // ***** Welcome Area End *****
